<resources>
    <string name="app_name">BookSwap</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_as_guest">Login as guest</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="static_register_got_account">Already got account?</string>
    <string name="action_register_back_to_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation">Navigation</string>
    <string name="drawer_item_home">home</string>
    <string name="drawer_item_settings">settings</string>
    <string name="drawer_item_history">History</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
