<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/book"
    android:backgroundTint="#A2B2C2"
    android:backgroundTintMode="multiply"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

            </EditText>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

            </EditText>


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonshape"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/login_layout_or_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

                <View
                    android:layout_width="270dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="OR"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <View
                    android:layout_width="270dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9" />

            </LinearLayout>

            <Button
                android:id="@+id/login_as_guest_button"
                style="?android:textAppearanceSmall"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/action_login_as_guest"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/login_layout_or_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="OR"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/action_register"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>